<resources>
    <string name="app_name">Popular Movies</string>
    <string name="error_message">Please try again later</string>
    <string name="fav_error_message">
        There is no movie in your favorite list, please add movies from popular or top rated.
    </string>
    <string name="title_activity_settings">Settings</string>
    <string name="poster_description">movie poster image thumbnail</string>
    <string name="movie_overview">Movie Overview</string>
    <string name="movie_title">Movie Title</string>
    <string name="release_date">2017&#8211;08&#8211;21</string>
    <string name="rating_score">7.9</string>

    <!-- MoviePlayer -->
    <string name="player_icon_des">Plays the trailer clip</string>

    <!-- Trailer -->
    <string name="line_separator_desc">Line separator</string>

    <!-- Strings related to Settings -->
    <!-- Example General settings -->

    <string name="pref_title_sort">Sort By</string>
    <!-- Key name for storing sort order in SharedPreferences -->
    <string name="pref_sort_key" translatable="false">sort_by</string>
    <string name="pref_sort_label_popular">Popular</string>
    <string name="pref_sort_label_toprated">Top Rated</string>
    <string name="pref_sort_label_favorite">Favorite</string>

    <string name="pref_sort_popular">0</string>
    <string name="pref_sort_toprated">1</string>
    <string name="pref_sort_favorite">2</string>


    <!-- Youtube player string resources -->
    <string name="player_error">Error initializing YouTube player: %s</string>

</resources>